[package]
name = "egg"
version = "0.8.1"
authors = ["Max Willsey <me@mwillsey.com>"]
edition = "2018"
description = "An implementation of egraphs"
repository = "https://github.com/egraphs-good/egg"
readme = "README.md"
license = "MIT"
keywords = ["e-graphs"]
categories = ["data-structures"]

[dependencies]
symbolic_expressions = { version = "5.0.3", optional = true }
log = { version = "0.4.17", optional = true }
smallvec = { version = "1.8.0", features = ["union", "const_generics"] }
indexmap = "1.8.1"
instant = { version = "0.1.12", optional = true }
fxhash = "0.2.1"
hashbrown = "0.12.1"
thiserror = { version = "1.0.31", optional = true }
symbol_table = { version = "0.1.0", features = ["global"], optional = true }

# for the lp feature
coin_cbc = { version = "0.1.6", optional = true }

# for the serde-1 feature
serde = { version = "1.0.137", features = ["derive"], optional = true }
vectorize = { version = "0.2.0", optional = true }

# for the reports feature
serde_json = { version = "1.0.81", optional = true }

[dev-dependencies]
env_logger = { version = "0.9.0", default-features = false }
ordered-float = "3.0.0"

[features]
default = ["standard"]
standard = ["log", "symbolic_expressions", "instant", "thiserror", "symbol_table"]
lp = ["standard", "coin_cbc"]
wasm-bindgen = ["standard", "instant/wasm-bindgen"]
serde-1 = [
    "standard",
    "serde",
    "indexmap/serde-1",
    "hashbrown/serde",
    "symbol_table/serde",
    "vectorize",
]
reports = ["standard", "serde-1", "serde_json"]

# private features for testing
test-explanations = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
